--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,1 +1,27 @@
+name: Generate Contribution Snake 🐍
 
+on:
+  schedule:
+    - cron: "0 0 * * *"  # Runs every midnight UTC
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate snake animation
+        uses: Platane/snk@v3
+        with:
+          github_user_name: k-r-abhishek
+          outputs: |
+            github-contribution-grid-snake.svg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push to GitHub
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: .
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
